--- a/aws/k8s/secret-challenge-vault-deployment.yml
+++ b/aws/k8s/secret-challenge-vault-deployment.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: secret-challenge
   name: secret-challenge
-  namespace: default
+  namespace: development
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
